--- a/04-B-binary-data.Rmd
+++ b/04-B-binary-data.Rmd
@@ -1,6 +1,6 @@
 ---
 layout: topic
-title: "GLM with count, binary. and proportional data"
+title: "GLM with count, binary, and proportional data"
 author: Tad and Meghan Howard
 output: html_document
 ---
