--- a/05-B-Bayesian-priors.Rmd
+++ b/05-B-Bayesian-priors.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 **Assigned Reading:**
 
-> Chapters 12 and 15 in Korner-Nievergelt et al. 2015. *Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.* Elsevier.[link](http://www.sciencedirect.com/science/book/9780128013700)
+> Chapters 12 and 15 in Korner-Nievergelt et al. 2015. *Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.* Elsevier. [link](http://www.sciencedirect.com/science/book/9780128013700)
 
 
 
@@ -32,10 +32,103 @@ repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 
 ### Key Points
 
+**Why use (weakly) informative priors?**
+
++ Uniform priors are unlikely representations of our actual prior state of knowledge.
++ Supplying prior distributions with some information allows us to fit models that cannot be fit with frequentist methods. (example- all binary outcomes are the same or binary outcomes separated by a covariate)
++ Supplying prior information mirrors the scientific process.
++ Supplying prior information makes our assumptions explicit.
+
+**How do we fit models with non-uniform priors?**
+
++ To fit models with non-uniform priors we need to simulate parameter samples with MCMC.
++ Mathematics proves that, given enough time, MCMC simulation methods produce samples of parameters from the joint posterior distribution.
++ Once convinced that an MCMC chain has converged to the posterior, we can use samples from it to make inferences in the same way that we used samples from `sim`, which were calculed analytically.
++ If you don't have a lot of prior information, do a sensititivity analysis (where you change the prior distributions) to make sure that prior choice is not unduly influencing inference.
+
+**How do you choose prior distributions?**
+
++ Make sure that the prior distribution covers all possible values of a parameter and doesn't allow any values that are impossible. (E.g. $\sigma$ must be positive)
++ Read [this advice](https://github.com/stan-dev/stan/wiki/Prior-Choice-Recommendations) from the Stan community.
+
+
+**How do you make inferences from MCMC output?**
+
++ MCMC *converges* to the correct posterior distribution. Therefore initial samples are not from the distribution and we don't want to make inference from them. 
+    + BUGS: called "burn-in", examine trace plot of full chain and decide on cut-off.
+    + Stan: called "warm-up", not actually a Markov chain and will be automatically droped from samples if using `rstan` package.
+
++ Markov chains are autocorrelated (adjacent values depend on one another), especially when parameters are correlated.
+    + To get 1000 independent samples, you may need to run the chain for much longer than 1000 post-burnin iterations.
+    + Can use "thinning" to avoid storing chain values that you won't actually use (e.g. save only 1 in 10 samples).
+    + Use the *effective sample size* (`n.eff`) to determine how many independent samples are possible from your chains (and run longer if necessary).
+
+**How might MCMC fail?**
+
++ High autocorrelation within chains and correlation between parameters can cause:
+    + Chains get stuck and don't sample from the full posterior distribution (e.g. show bad mixing).
+    + Multiple chains don't sample from the same posterior distribution (initial starting values influence samples). 
+
++ Complex models (especially hierarchical models) required longer to converge.
+
++ Models will converge faster with mathematical tricks:
+    + Center and scale predictors (`scale(x, center = TRUE, scale = TRUE)` will do: `(x - mean(x))/sd(x)`).
+    + Use reparametrization to make it easier to estimate parameters, such as the variance of a random effect. See section 27, Optimizing Stan Code for Efficiency, on p. 333 in the [Stan User's Guide and Documentation](http://mc-stan.org/users/documentation/).
+    
++ There is not enough data to estimate a parameter and the prior distribution is very vague.
+  
+
+**How can you tell that MCMC results are reliable?**
+
++ Trace plots that show the value of each parameter through "time" should show good "mixing".
++ Trace plots from separate "chains" should converge on the same values.
++ $\hat{R} < 1.02$ shows that variance across multiple chains is the same. 
+
+
+**Software comparison**
+
+| OpenBUGS (also WinBUGS, JAGS)    | Stan                                 |
+|----------------------------------|--------------------------------------|
+| Older = more textbook and tutorial examples. | Newer = more active development. |
+| Uses Gibbs sampling, Metropolis-Hastings algoritm or slice sampling. | Uses Hamiltonian Monte Carlo sampling and optimization-based point estimation. |
+| Some details can be implicit. | All model details must be explicit. |
+| Slower computation.     | Faster computation, especially for hierarchical models and large data sets. |
+| Limited number of functions available. | Many functions avaible. |
+| Write models using loops. | Write models using loops or vector algebra.|
+| Can only provide data used to fit the model. | Can provide extraneous data. |
+| Must provide initial values. | Initial values optional. |
+| Chains more autocorrelated. | Chains less autocorrelated. |
+| Detailed [documentation and examples](http://www.openbugs.net/w/Documentation) | Detailed [documentation and examples](http://mc-stan.org/users/documentation/index.html).|
+
+
+**Steps:**
+
+0. Install [Stan](https://github.com/stan-dev/rstan/wiki/RStan-Getting-Started) or [OpenBUGS](http://www.openbugs.net/w/Downloads) or [JAGS](http://mcmc-jags.sourceforge.net/)
+1. Write down the model(s) you want to fit on paper.
+2. Specify prior distributions for all unknown parameters.
+3. Convert the model(s) to Stan (or BUGS) code in a text file.
+4. Create R objects containing the data needed to fit the model(s).
+5. Use `rstan` or `R2OpenBUGS` or `R2jags` (or other package) to fit the models in R by referencing the model text file.
+6. Examine trace plots, $\hat{R}$ and effective samples sizes for each parameter.
+7. Examine correlations between parameters.
+8. Decide whether chains are sampling from the posterior distribution.
+9. Check whether priors are unduly influencing posterior.
+10. Proceed with model selection and validation by examining information criteria (WAIC) and residuals. Repeat steps 1-10 as needed to find an acceptable model.
+11. Use samples from final model after the burn-in period to make inferences.
+
 
 
 ### Analysis Example
 
+
+Should demonstrate:
+
+ + stan model code
+ + fitting a model with the rstan package
+ + examining Rhat and n.eff for convergence
+ + extracting samples from a fitted
+ + plotting traceplots to look for convergence
+ + plotting model prediction with CrI 
 
 
 ### Discussion Questions
