--- a/05-A-Bayesian-linear-models.Rmd
+++ b/05-A-Bayesian-linear-models.Rmd
@@ -175,7 +175,9 @@ Remember you could use any linear model from lm() glm() or glmer() but we are go
 rm(list=ls()) 
 
 # read in the data
-Loyn<- read.table(file = "/Users/jamiemcdevitt-irwin/Dropbox/Jamie/Stanford/3_Courses/Biol202/Week3_linearmodels_intro/ZuurDataMixedModelling/Loyn.txt", header = TRUE, dec = ".")   
+#Loyn<- read.table(file = "/Users/jamiemcdevitt-irwin/Dropbox/Jamie/Stanford/3_Courses/Biol202/Week3_linearmodels_intro/ZuurDataMixedModelling/Loyn.txt", header = TRUE, dec = ".")   
+
+Loyn <- read.table("data/Loyn.txt", header = TRUE)
 
 # let's take a quick look at the data
 head(Loyn)
@@ -205,7 +207,7 @@ nsim <-1000 # number of simulations can be changed to whatever you want
 bsim <- sim(M1, n.sim=nsim)
 str(sim)
 ```
-sim() produces an object of class sim that contains "coef" (1000 simulated values for theta, i.e. your parameters) and "sigma" containing the 1000 values for variance
+sim() produces an object of class sim that contains "coef" (1000 simulated values for theta, i.e. your parameters) and "sigma" containing the 1000 values for standard deviation.
 
 ##### Summary statistics to describe posterior knowledge about the parameters (theta) and the variance
 ```{r include = TRUE}
@@ -216,14 +218,9 @@ quantile(bsim@sigma, prob=c(0.025, 0.975)) # variance
 
 
 ##### What if we want to test hypotheses about our data using the posterior distribution?    
-**H1.** How sure are we that the density is greater than 1? 10? 100?
-```{r include = TRUE}
+**H1.** 
 
-mean(bsim@coef>1) # 41% probability that the density is greater than 1
-mean(bsim@coef>10) # 9% probability that the density is greater than 10
-mean(bsim@coef>100) # 0% probability that the density is greater than 100
-```
-Note: this is not the proportion of densities measured that are over 1/10/100, it just expresses what we can infer about the true population mean from the observations we measured
+
 
 **H2.** How sure are we that the slope parameter for ALT is larger than .05, .1, .2?
 ```{r include = TRUE}
@@ -303,7 +300,7 @@ Note: compared to a frequentist approach (predict()), this takes a lot more code
 ```{r include = TRUE}
 sum(newy[newdat$ALT==60,]>20)/nsim
 ```
-Thus we expect 22% of future observations with ALT=60 to have a density of birds greater than 20
+Thus we expect 20% of future observations with ALT=60 to have a density of birds greater than 20
 
 
 **EX2.** IF ALT=120, what is the estimated proportion of observations greater than 20?
